# Custom-RSS-Email-Feed

./: README.md
main/: .gitignore  Cargo.toml  config.example.toml  install.sh
main/src/: config.rs  email.rs  gemini.rs  main.rs  rss.rs
main/systemd/: rss-market-digest.service  rss-market-digest.timer
